Update hero styling and global colors

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #2F2F2F;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  color: #2F2F2F;
 }
