Add prismic and begin blog display

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
   color: #2F2F2F;
 }
 
-code {
+pre {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
   color: #2F2F2F;
